ingress/other-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploymentxd
  labels:
    app: endpoint2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: endpoint2
  template:
    metadata:
      labels:
        app: endpoint2
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo Other deployment: from $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2
  labels:
    app: endpoint2
spec:
  type: ClusterIP
  selector:
    app: endpoint2
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
